minor visibility fix

--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ body{
     }
     .one{
         background-size: 30vw;
+        color: white;
     }
     .two{
         background-size: 30vw;
